# oidc_service

./: .envrc  .envrc.example  Cargo.toml  Dockerfile  Procfile  README.md  payload.json  railway.toml
.github/workflows/: get_and_validate_JWT.yml  get_jwt.yml  test_jwt.yml
src/: main.rs
