[package]
name = "oidc-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.9.0"
color-eyre = "0.6.3"
env_logger = "0.11.5"
fmt = "0.1.0"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = "1.0.209"
serde_json = "1.0.127"
tokio = "1.39.3"
uuid = { version = "1.3", features = ["v4"] }
